// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTicker should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX elhfwo"
  />
  <div
    class="sc-bwzfXH eLGWmp"
    height="100"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX elhfwo"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;
